# keepsake

./: .gitignore  .mise.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  Makefile  README.md  docker-compose.yml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  sgconfig.yml
.config/mise/conf.d/: batten.toml
.config/mise/tasks/: check  fmt  lint-structure  test-db
.forgejo/workflows/: ci.yml  docs.yml
.github/workflows/: ci.yml
crates/keepsake/: Cargo.toml
crates/keepsake-sqlx/: Cargo.toml
crates/keepsake-sqlx/migrations/mysql/: 0001_init.sql  0002_lifecycle_invariants.sql  0003_fulfillment_expiry_index.sql  0004_fulfillment_checklist.sql  0005_audit_outbox.sql
crates/keepsake-sqlx/migrations/postgres/: 0001_init.sql  0002_lifecycle_invariants.sql  0003_schema_metadata.sql  0004_fulfillment_expiry_index.sql  0005_fulfillment_checklist.sql  0006_audit_outbox.sql
crates/keepsake-sqlx/migrations/sqlite/: 0001_init.sql  0002_lifecycle_invariants.sql  0003_fulfillment_expiry_index.sql  0004_fulfillment_checklist.sql  0005_audit_outbox.sql
crates/keepsake-sqlx/src/: lib.rs  repository.rs
crates/keepsake-sqlx/src/repository/: audit.rs  backend.rs  cache.rs  expiry.rs  mutation.rs  mysql.rs  query.rs  relation.rs  rows.rs  schema.rs  sqlite.rs  support.rs  tests.rs  timed.rs  types.rs
crates/keepsake-sqlx/src/repository/expiry/: fulfillment.rs
crates/keepsake-sqlx/src/repository/mysql/: audit.rs  expiry.rs  fulfillment.rs  lifecycle.rs  query.rs  relation.rs  rows.rs
crates/keepsake-sqlx/src/repository/sqlite/: audit.rs  expiry.rs  fulfillment.rs  lifecycle.rs  query.rs  relation.rs  rows.rs
crates/keepsake-sqlx/tests/: mysql.rs  postgres.rs  sqlite.rs
crates/keepsake-sqlx/tests/mysql/: audit.rs  fulfillment.rs  lifecycle.rs  migrations.rs  queries.rs  support.rs
crates/keepsake-sqlx/tests/postgres/: apply.rs  audit.rs  expiry.rs  queries.rs  relations.rs  support.rs
crates/keepsake-sqlx/tests/postgres/support/: db.rs
crates/keepsake-sqlx/tests/sqlite/: audit.rs  expiry.rs  fulfillment.rs  lifecycle.rs  migrations.rs  queries.rs  support.rs
crates/keepsake-sqlx/tests/support/: backend_cases.rs
crates/keepsake/src/: command.rs  error.rs  evaluation.rs  lib.rs  model.rs  observe.rs  policy.rs  provider.rs
crates/keepsake/src/audit/: memory.rs  mod.rs
crates/keepsake/src/model/: fulfillment.rs  identity.rs  keepsake.rs  relation.rs  tests.rs
crates/keepsake/src/model/keepsake/: record.rs
crates/keepsake/src/provider/: memory.rs
docs/: README.md  installation.md  overview.md  quickstart.md
docs-site/: astro.config.mjs  package.json  pnpm-lock.yaml
docs-site/src/content/docs/: index.mdx
docs-site/src/content/docs/guides/: audit-sinks.mdx  expiry-jobs.mdx  fulfillment-projections.mdx  observability.mdx  sanctions.mdx  tags.mdx
docs-site/src/content/docs/operations/: cron-workers.mdx  indexes.mdx  migrations.mdx  query-performance.mdx  versioning.mdx
docs-site/src/content/docs/reference/: command-api.mdx  core-concepts.mdx  error-model.mdx  feature-flags.mdx  lifecycle-model.mdx  sqlx-adapter.mdx
docs-site/src/content/docs/start-here/: installation.mdx  overview.mdx  quickstart.mdx
docs-site/src/styles/: custom.css
docs/guides/: audit-sinks.md  expiry-jobs.md  fulfillment-projections.md  observability.md  sanctions.md  tags.md
docs/operations/: cron-workers.md  indexes.md  migrations.md  query-performance.md  versioning.md
docs/reference/: command-api.md  core-concepts.md  error-model.md  feature-flags.md  lifecycle-model.md  sqlx-adapter.md
examples/postgres-sanctions/: Cargo.toml
examples/postgres-sanctions/src/: main.rs
examples/postgres-tags/: Cargo.toml
examples/postgres-tags/src/: main.rs
scripts/: check-database-gates.sh  check-project-gates.sh
tools/ast-grep/: README.md
tools/ast-grep/rules/: rust-block-spacing.yml  rust-elseif-cascade.yml  rust-empty-match-noop.yml  rust-if-let-policy-cascade-dense.yml  rust-if-let-policy-cascade.yml
tools/ast-grep/tests/: rust-block-spacing-test.yml  rust-elseif-cascade-test.yml  rust-empty-match-noop-test.yml  rust-if-let-policy-cascade-dense-test.yml  rust-if-let-policy-cascade-test.yml
