[workspace]
members = [
  "crates/keepsake",
  "crates/keepsake-sqlx",
  "examples/postgres-tags",
  "examples/postgres-sanctions",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
repository = "https://codeberg.org/plethu/keepsake"
homepage = "https://codeberg.org/plethu/keepsake"
authors = ["Mari"]

[workspace.dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde", "std"] }
keepsake = { path = "crates/keepsake", version = "0.5.1" }
keepsake-sqlx = { path = "crates/keepsake-sqlx", version = "0.5.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "macros"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.18.1", features = ["serde", "v4", "v7"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"
unimplemented = "deny"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
