[package]
name = "keepsake-sqlx"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "SQLx/Postgres adapter for keepsake lifecycle storage"
readme = "../../README.md"
categories = ["database"]
keywords = ["sqlx", "postgres", "lifecycle", "audit"]

[features]
default = ["cache", "fulfillment-counters", "migrations"]
cache = []
migrations = []
fulfillment-counters = []
postgres-tests = ["fulfillment-counters", "migrations"]

[dependencies]
async-trait.workspace = true
chrono.workspace = true
keepsake.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
