[package]
name = "keepsake-sqlx"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "SQLx adapter for keepsake lifecycle storage"
readme = "../../README.md"
categories = ["database"]
keywords = ["sqlx", "database", "lifecycle", "audit"]
documentation = "https://docs.rs/keepsake-sqlx"

[features]
default = ["postgres", "cache", "fulfillment-counters", "migrations"]
cache = []
postgres = ["sqlx/postgres", "sqlx/uuid", "sqlx/chrono", "sqlx/json"]
sqlite = ["sqlx/sqlite", "sqlx/chrono", "sqlx/json"]
mysql = ["sqlx/mysql", "sqlx/chrono", "sqlx/json"]
migrations = ["sqlx/migrate"]
fulfillment-counters = []
postgres-tests = ["postgres", "cache", "fulfillment-counters", "migrations"]
sqlite-tests = ["sqlite", "cache", "fulfillment-counters", "migrations"]
mysql-tests = ["mysql", "cache", "fulfillment-counters", "migrations"]

[dependencies]
async-trait.workspace = true
chrono.workspace = true
keepsake.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
